# blader

./: LICENSE  README.md  blade.txt  blade1.txt  coords.txt  setup.cfg  setup.py  test.py  testBlade.py  testCamberline.py  testOptimizer.py  testScaling.py
misc/: test.py
src/geometryLIB/: IO.py  blade.py  camberline.py  converter.py  inverseKulfan.py  optimizer.py  profileLine.py  reader.py  scaling.py
src/guiLIB/: cLine.txt  gui.py  optimizationGUI.py  pLine.txt  pLineBernstein.txt  sLine.txt
test/: testBlade.py  testOptimizer.py  testProfileLine.py  test_blade.py  test_camberline.py  test_module.py  test_optimizer.py  test_profileLine.py  test_scaling.py
test/container/: test_camberline.json  test_optimizer.json
test/fig/: camberline01.eps  camberline02.eps  camberline03.eps  camberline04.eps  camberline05.eps  camberline06.eps  camberline07.eps  camberline08.eps  camberline09.eps  camberline10.eps  camberline100.eps  camberline101.eps  camberline102.eps  camberline103.eps  camberline104.eps  camberline105.eps  camberline106.eps  camberline107.eps  camberline108.eps  camberline109.eps  camberline11.eps  camberline110.eps  camberline111.eps  camberline112.eps  camberline113.eps  camberline114.eps  camberline115.eps  camberline116.eps  camberline117.eps  camberline118.eps  camberline119.eps  camberline12.eps  camberline120.eps  camberline121.eps  camberline122.eps  camberline123.eps  camberline124.eps  camberline125.eps  camberline126.eps  camberline127.eps  (+203 more)
