[metadata]
name = blader
version = 1.0.0
license = MIT 
author = Antonio Pucciarelli 
author_email = antonio.pucc@gmail.com      
url = https://github.com/antoniopucciarelli
description = Airfoil parametrization tool 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
keywords =
    parametrization
    optimization

[options]
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >= 3.10
install_requires = 
    numpy < 1.24
    scipy >= 1.10.0
    matplotlib >= 3.6
    customtkinter >= 5.2.1
    
test_requires = pytest

[options.packages.find]
where = src

# [options.entry_points]
# console_scripts =
    # compiling-fortran = compileLIB:fortranCompilation